--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
  .front-page{
      width: 100%;
      height: 100vh;
+     clip-path: circle(8%);
  }
 
  .front-page video{
@@ -19,8 +20,10 @@
  .icon{
      position: absolute;
      top: 50%;
-     left: 50%;
      transform: translate(-50%, -50%);
+     left: 50%;
+     color: white;
+     z-index: 3;
  }
 
  .blend{
@@ -30,3 +33,16 @@
      position: absolute;
      opacity: 0.3;
     }
+
+.title {
+    font-size: 5rem;
+    padding-bottom: 1rem;
+}
+
+.sub-title {
+    font-size: 1.7rem;   
+}
+
+.second-page{
+    height: 100vh;
+}
